infra/k8s/expiration-redis-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-expiration-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-expiration-redis
  template:
    metadata:
      labels:
        app: ticket-expiration-redis
    spec:
        containers:
        - name: ticket-expiration-redis
          image: redis
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-expiration-redis-clusterip-srv
spec:
  selector:
    app: ticket-expiration-redis
  ports:
    - name: ticket-expiration-redis
      protocol: TCP
      port: 6379
      targetPort: 6379
