infra/k8s/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: ticket-auth-nodeport-srv
spec:
  type: NodePort
  selector:
    app: ticket-auth
  ports:
    - name: ticket-auth
      protocol: TCP
      port: 4000
      targetPort: 4000
