infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-ticket-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-ticket
  template:
    metadata:
      labels:
        app: ticket-ticket
    spec:
      containers:
        - name: ticket-ticket
          image: gcr.io/simpl-project138/ticket
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-ticket-clusterip-srv
spec:
  selector:
    app: ticket-ticket
  ports:
    - name: ticket-ticket
      protocol: TCP
      port: 4001
      targetPort: 4001
