infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticket-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ticketdev.com
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: ticket-auth-clusterip-srv
                port:
                  number: 4000
          - path: /api/tickets
            pathType: Prefix
            backend:
              service:
                name: ticket-ticket-clusterip-srv
                port:
                  number: 4001
          
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: ticket-order-clusterip-srv
                port:
                  number: 4002
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: ticket-client-clusterip-srv
                port:
                  number: 3000
